@@ -1,3 +1,8 @@
+2004-11-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* testsuite/cruncher/cruncher.c (sampler_thread): Really calibrate
+	the cruncher for a 10 ms computation.
+
 2004-11-07  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* configure.in (RTAI_KBUILD_CMD): Do return the same status as
